<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ BruceHurrican
  ~ Copyright (c) 2016.
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~
  ~    This document is Bruce's individual learning the android demo, wherein the use of the code from the Internet, only to use as a learning exchanges.
  ~    And where any person can download and use, but not for commercial purposes.
  ~    Author does not assume the resulting corresponding disputes.
  ~    If you have good suggestions for the code, you can contact BurrceHurrican@foxmail.com
  ~    本文件为Bruce's个人学习android的作品, 其中所用到的代码来源于互联网，仅作为学习交流使用。
  ~    任和何人可以下载并使用, 但是不能用于商业用途。
  ~    作者不承担由此带来的相应纠纷。
  ~    如果对本代码有好的建议，可以联系BurrceHurrican@foxmail.com
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/monthCount"
        android:gravity="center"
        android:text="月统计"
        android:textColor="#fff"
        android:textSize="26sp"
        tools:ignore="HardcodedText"/>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/bgbtn2"
        android:text="增加记录"
        android:textColor="#fff"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_alignBottom="@id/btn_add"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:background="@drawable/bgbtn2"
        android:text="清除当月所有记录"
        android:textColor="#fff"
        android:textSize="16sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/btn_add"
        android:layout_alignTop="@id/btn_add"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@id/btn_clear"
        android:layout_toRightOf="@id/btn_add"
        android:background="#ffcc99">

        <LinearLayout
            android:id="@+id/ll_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_budget"
            android:textColor="#af00"
            android:textSize="16sp"
            tools:ignore="HardcodedText"/>

        <TextView
            android:id="@+id/tv_remain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="月预算余额:"
            android:textColor="#af00"
            android:textSize="16sp"
            tools:ignore="HardcodedText"/>

        <TextView
            android:id="@+id/tv_count_early"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="上旬消费统计:"
            android:textColor="#af00"
            android:textSize="16sp"
            tools:ignore="HardcodedText"/>

        <TextView
            android:id="@+id/tv_count_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="中旬消费统计:"
            android:textColor="#af00"
            android:textSize="16sp"
            tools:ignore="HardcodedText"/>

        <TextView
            android:id="@+id/tv_count_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="下旬消费统计:"
            android:textColor="#af00"
            android:textSize="16sp"
            tools:ignore="HardcodedText"/>

    </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/tv_rv_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/btn_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/bgbtn2"
            android:singleLine="true"
            android:text="列表"
            android:textSize="16sp"
            tools:ignore="HardcodedText"/>

        <Button
            android:id="@+id/btn_grid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/bgbtn2"
            android:singleLine="true"
            android:text="网格"
            android:textSize="16sp"
            tools:ignore="HardcodedText"/>

        <Button
            android:id="@+id/btn_db_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/bgbtn2"
            android:singleLine="true"
            android:text="备份"
            android:textSize="16sp"
            tools:ignore="HardcodedText"/>

        <Button
            android:id="@+id/btn_db_restore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bgbtn2"
            android:singleLine="true"
            android:text="恢复"
            android:textSize="16sp"
            tools:ignore="HardcodedText"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_add"
        android:layout_below="@id/tv_rv_type"/>
</RelativeLayout>