<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ BruceHurrican
  ~  Copyright (c) 2016.
  ~     Licensed under the Apache License, Version 2.0 (the "License");
  ~     you may not use this file except in compliance with the License.
  ~     You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~     Unless required by applicable law or agreed to in writing, software
  ~     distributed under the License is distributed on an "AS IS" BASIS,
  ~     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~     See the License for the specific language governing permissions and
  ~     limitations under the License.
  ~
  ~     This document is Bruce's individual learning the android demo, wherein the use of the code from the Internet, only to use as a learning exchanges.
  ~     And where any person can download and use, but not for commercial purposes.
  ~     Author does not assume the resulting corresponding disputes.
  ~     If you have good suggestions for the code, you can contact BurrceHurrican@foxmail.com
  ~     本文件为Bruce's个人学习android的作品, 其中所用到的代码来源于互联网，仅作为学习交流使用。
  ~     任和何人可以下载并使用, 但是不能用于商业用途。
  ~     作者不承担由此带来的相应纠纷。
  ~     如果对本代码有好的建议，可以联系BurrceHurrican@foxmail.com
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tool="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#8000"
                android:paddingTop="5dp">


        <AutoCompleteTextView
            android:id="@+id/actw_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/monthCount"
            android:completionThreshold="1"
            android:gravity="center"
            android:hint="标题(必填项)"
            android:singleLine="true"
            android:textColor="#fff"
            android:textSize="26sp"
            tool:ignore="HardcodedText"/>

        <MultiAutoCompleteTextView
            android:id="@+id/mactw_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/actw_title"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary"
            android:completionThreshold="1"
            android:gravity="left|top"
            android:hint="消费项目(可以不填)"
            android:lines="6"
            android:maxLines="6"
            android:textColor="#fff"
            android:textColorHint="#BCBCBC"
            android:textSize="18sp"
            tool:ignore="HardcodedText"/>

        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/mactw_content"
            android:layout_alignRight="@id/mactw_content"
            android:layout_below="@id/mactw_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/actw_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:hint="输入日期1~31\n(必填项)"
                android:inputType="number"
                android:maxLines="2"
                android:singleLine="false"
                android:textColor="#fff"
                android:textColorHint="#BCBCBC"
                android:textSize="20sp"
                tool:ignore="HardcodedText"/>

            <EditText
                android:id="@+id/et_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:hint="金额\n(必填项)"
                android:inputType="numberDecimal"
                android:maxLines="2"
                android:singleLine="false"
                android:textColor="#fff"
                android:textColorHint="#BCBCBC"
                android:textSize="20sp"
                tool:ignore="HardcodedText"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/mactw_content"
            android:layout_alignRight="@id/mactw_content"
            android:layout_below="@id/ll_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/bgbtn2"
                android:text="确定"
                android:textColor="#fff"
                android:textSize="20sp"
                tool:ignore="HardcodedText"/>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/bgbtn2"
                android:text="取消"
                android:textColor="#fff"
                android:textSize="20sp"
                tool:ignore="HardcodedText"/>

        </LinearLayout>
</RelativeLayout>